--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -44,6 +44,7 @@
     <string name="allow" msgid="8885707816848569619">"Разрешаване"</string>
     <string name="deny" msgid="6040983710442068936">"Отказ"</string>
     <string name="add" msgid="2894574044585549298">"Добавяне"</string>
+    <string name="picker_view_selected" msgid="2266031384396143883">"Преглед на избраното"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">Да се разреши ли на <xliff:g id="APP_NAME_1">^1</xliff:g> да промени <xliff:g id="COUNT">^2</xliff:g> аудиофайла?</item>
       <item quantity="one">Да се разреши ли на <xliff:g id="APP_NAME_0">^1</xliff:g> да промени този аудиофайл?</item>
