--- a/res/values-bn/strings.xml
+++ b/res/values-bn/strings.xml
@@ -43,7 +43,8 @@
     <string name="clear" msgid="5524638938415865915">"সরান"</string>
     <string name="allow" msgid="8885707816848569619">"অনুমতি দিন"</string>
     <string name="deny" msgid="6040983710442068936">"বাতিল করুন"</string>
-    <!-- no translation found for add (2894574044585549298) -->
+    <string name="add" msgid="2894574044585549298">"যোগ করুন"</string>
+    <!-- no translation found for picker_view_selected (2266031384396143883) -->
     <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="one"><xliff:g id="APP_NAME_1">^1</xliff:g>-কে <xliff:g id="COUNT">^2</xliff:g>টি অডিও ফাইল পরিবর্তন করার অনুমতি দিতে চান?</item>
