--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -44,6 +44,7 @@
     <string name="allow" msgid="8885707816848569619">"許可"</string>
     <string name="deny" msgid="6040983710442068936">"許可しない"</string>
     <string name="add" msgid="2894574044585549298">"追加"</string>
+    <string name="picker_view_selected" msgid="2266031384396143883">"選択した写真を見る"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="COUNT">^2</xliff:g> 件の音声ファイルの変更を <xliff:g id="APP_NAME_1">^1</xliff:g> に許可しますか？</item>
       <item quantity="one">この音声ファイルの変更を <xliff:g id="APP_NAME_0">^1</xliff:g> に許可しますか？</item>
