--- a/res/values-ka/strings.xml
+++ b/res/values-ka/strings.xml
@@ -44,6 +44,7 @@
     <string name="allow" msgid="8885707816848569619">"დაშვება"</string>
     <string name="deny" msgid="6040983710442068936">"უარყოფა"</string>
     <string name="add" msgid="2894574044585549298">"დამატება"</string>
+    <string name="picker_view_selected" msgid="2266031384396143883">"ხედი არჩეულია"</string>
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">აძლევთ უფლებას <xliff:g id="APP_NAME_1">^1</xliff:g>-ს, შეცვალოს <xliff:g id="COUNT">^2</xliff:g> აუდიოფაილი?</item>
       <item quantity="one">აძლევთ უფლებას <xliff:g id="APP_NAME_0">^1</xliff:g>-ს, შეცვალოს ეს აუდიოფაილი?</item>
