--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -44,6 +44,8 @@
     <string name="allow" msgid="8885707816848569619">"Tillat"</string>
     <string name="deny" msgid="6040983710442068936">"Avvis"</string>
     <string name="add" msgid="2894574044585549298">"Legg til"</string>
+    <!-- no translation found for picker_view_selected (2266031384396143883) -->
+    <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other">Vil du tillate at <xliff:g id="APP_NAME_1">^1</xliff:g> endrer <xliff:g id="COUNT">^2</xliff:g> lydfiler?</item>
       <item quantity="one">Vil du tillate at <xliff:g id="APP_NAME_0">^1</xliff:g> endrer denne lydfilen?</item>
