--- a/res/values-te/strings.xml
+++ b/res/values-te/strings.xml
@@ -43,7 +43,8 @@
     <string name="clear" msgid="5524638938415865915">"క్లియర్ చేయండి"</string>
     <string name="allow" msgid="8885707816848569619">"అనుమతించు"</string>
     <string name="deny" msgid="6040983710442068936">"నిరాకరించు"</string>
-    <!-- no translation found for add (2894574044585549298) -->
+    <string name="add" msgid="2894574044585549298">"జోడించు"</string>
+    <!-- no translation found for picker_view_selected (2266031384396143883) -->
     <skip />
     <plurals name="permission_write_audio" formatted="false" msgid="8914759422381305478">
       <item quantity="other"><xliff:g id="COUNT">^2</xliff:g> ఆడియో ఫైల్‌లను సవరించడానికి <xliff:g id="APP_NAME_1">^1</xliff:g>ను అనుమతించాలా?</item>
