--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -82,6 +82,12 @@
     <!-- Add button for PhotoPicker. [CHAR LIMIT=30] -->
     <string name="add">Add</string>
 
+    <!-- Deselect button for PhotoPicker. [CHAR LIMIT=30] -->
+    <string name="deselect">Deselect</string>
+
+    <!-- Select button for PhotoPicker. [CHAR LIMIT=30] -->
+    <string name="select">Select</string>
+
     <!-- PhotoPicker view selected action text. [CHAR LIMIT=80] -->
     <string name="picker_view_selected">View selected</string>
 
